--- a/src/index.html
+++ b/src/index.html
@@ -25,5 +25,6 @@
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<script src="http://localhost:6001/socket.io/socket.io.js"></script>
 
 </html>
