--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,8 @@
       type="image/gif"
       sizes="16x16"
     />
+    <script src="http://127.0.0.1:6001/socket.io/socket.io.js"></script>
+    <script src="https://adminbeecareer.poly.edu.vn:6001/socket.io/socket.io.js"></script>
   </head>
 
   <body class="mat-typography">
